--- a/index.html
+++ b/index.html
@@ -496,144 +496,125 @@
     //  AI 功能升級版：計算與問答
     // ==========================================
 
-    // 功能 A：AI 自動估算熱量 (只回傳數字)
-// 功能 A：AI 自動估算熱量 (防當機修正版)
-    async function askAiToEstimate() {
-        const foodName = document.getElementById('foodInput').value;
-        const calInput = document.getElementById('calInput');
-        const reasonText = document.getElementById('aiReason');
-        const overlay = document.getElementById('aiCalculatingOverlay');
+<script>
+/* ==========================================
+   AI 穩定版設定
+========================================== */
 
-        if (!foodName) {
-            alert("請先輸入食物名稱");
-            return;
+const GEMINI_API_KEY = "你的 API KEY 放這裡"; // ⚠️ 之後我會教你怎麼藏
+const GEMINI_MODEL = "gemini-1.5-flash";
+
+/* 共用呼叫 Gemini（最穩定寫法） */
+async function callGemini(promptText) {
+    const res = await fetch(
+        `https://generativelanguage.googleapis.com/v1beta/models/${GEMINI_MODEL}:generateContent?key=${GEMINI_API_KEY}`,
+        {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+                contents: [{ parts: [{ text: promptText }] }]
+            })
         }
+    );
 
-        overlay.classList.remove('hidden');
-        if(reasonText) reasonText.classList.add('hidden');
+    if (!res.ok) throw new Error("Gemini API 失敗");
 
-        const promptText = `
-            使用者輸入了食物："${foodName}"。
-            請估算熱量，並以 JSON 格式回傳。
-            格式範例：{"cal": 500, "desc": "說明..."}
-            只要回傳純 JSON 字串。
-        `;
-
-        try {
-            // 🔄 修改點 1：換成 gemini-pro 模型，比較穩定
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${GEMINI_API_KEY}`, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ contents: [{ parts: [{ text: promptText }] }] })
-            });
-
-            // 🛡️ 修改點 2：檢查 API 是否成功
-            if (!response.ok) {
-                throw new Error(`API 連線錯誤: ${response.status}`);
-            }
-
-            const data = await response.json();
-
-            // 🛡️ 修改點 3：先檢查有沒有 candidates，才去讀取 [0]
-            if (data.candidates && data.candidates.length > 0) {
-                let aiReply = data.candidates[0].content.parts[0].text.trim();
-                aiReply = aiReply.replace(/```json|```/g, '').trim();
-                
-                try {
-                    const result = JSON.parse(aiReply);
-                    if (result.cal) {
-                        calInput.value = result.cal;
-                        calInput.classList.add('bg-rose-100');
-                        setTimeout(() => calInput.classList.remove('bg-rose-100'), 500);
-                        if(reasonText) {
-                            reasonText.innerText = `💡 參考基準：${result.desc}`;
-                            reasonText.classList.remove('hidden');
-                        }
-                    }
-                } catch (e) {
-                    console.error("JSON 解析失敗", e);
-                    alert("AI 回傳格式看不懂，請手動輸入");
-                }
-            } else {
-                console.error("AI 沒有回傳 candidates", data);
-                alert("AI 暫時無法回應，請稍後再試。");
-            }
-
-        } catch (error) {
-            console.error(error);
-            alert("連線失敗，請檢查 API Key 或網路");
-        } finally {
-            overlay.classList.add('hidden');
-        }
+    const data = await res.json();
+    if (!data.candidates || !data.candidates.length) {
+        throw new Error("Gemini 沒回內容");
     }
 
-    // 功能 B：AI 營養師問答 (根據情境回答)
-// 功能 B：AI 營養師問答 (防當機修正版)
-    async function askAiQuestion() {
-        const questionInput = document.getElementById('aiQuestionInput');
-        const aiBox = document.getElementById('aiResponseBox');
-        const aiContent = document.getElementById('aiContent');
-        const userQuestion = questionInput.value.trim();
-        
-        // 準備數據 (略，維持原本變數抓取)
-        const total = document.getElementById('totalIntake').innerText;
-        const budget = document.getElementById('budgetDisplay').innerText;
-        const balance = document.getElementById('balance').innerText;
-        const todayFood = records.map(r => r.name).join('、');
+    return data.candidates[0].content.parts[0].text.trim();
+}
 
-        // 顯示載入中
-        aiBox.classList.remove('hidden');
-        aiContent.innerHTML = '<i class="fa-solid fa-spinner fa-spin text-violet-400"></i> AI 思考中...';
+/* ==========================================
+   功能 A：AI 熱量估算（穩定）
+========================================== */
+async function askAiToEstimate() {
+    const foodInput = document.getElementById('foodInput');
+    const calInput = document.getElementById('calInput');
+    const overlay = document.getElementById('aiCalculatingOverlay');
 
-        // Prompt 設定 (維持原本邏輯，這裡簡化顯示)
-        let promptText = "";
-        if (userQuestion === "") {
-             promptText = `角色：嚴格又幽默的教練。今日預算${budget}，剩餘${balance}。給個短評。`;
+    if (!foodInput.value.trim()) {
+        alert("先輸入吃了什麼啦 😅");
+        return;
+    }
+
+    overlay.classList.remove('hidden');
+
+    const prompt = `
+請估算以下食物的熱量，只回傳 JSON。
+食物：${foodInput.value}
+
+格式：
+{"cal": 數字}
+`;
+
+    try {
+        const reply = await callGemini(prompt);
+        const clean = reply.replace(/```json|```/g, "");
+        const result = JSON.parse(clean);
+
+        if (result.cal) {
+            calInput.value = result.cal;
+            calInput.classList.add("bg-rose-100");
+            setTimeout(() => calInput.classList.remove("bg-rose-100"), 600);
         } else {
-             promptText = `角色：營養師。使用者問："${userQuestion}"。請根據他今日剩餘熱量${balance}回答。`;
+            throw new Error("沒拿到熱量");
         }
 
-        try {
-            // 🔄 修改點 1：換成 gemini-pro
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${GEMINI_API_KEY}`, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ contents: [{ parts: [{ text: promptText }] }] })
-            });
-
-            if (!response.ok) throw new Error(`API Error: ${response.status}`);
-
-            const data = await response.json();
-
-            // 🛡️ 修改點 2：安全讀取
-            if (data.candidates && data.candidates.length > 0) {
-                const aiReply = data.candidates[0].content.parts[0].text;
-                typeWriter(aiReply, aiContent);
-                questionInput.value = ''; 
-            } else {
-                aiContent.innerText = "AI 似乎在發呆 (沒有回傳內容)，請再試一次。";
-            }
-
-        } catch (error) {
-            console.error(error);
-            aiContent.innerText = `連線發生錯誤 (${error.message})，請檢查 API Key。`;
-        }
-    }    
-
-    // 打字機特效 (沿用之前的)
-    function typeWriter(text, element) {
-        element.innerHTML = "";
-        let i = 0;
-        const speed = 20; 
-        function type() {
-            if (i < text.length) {
-                element.innerHTML += text.charAt(i) === '\n' ? '<br>' : text.charAt(i);
-                i++;
-                setTimeout(type, speed);
-            }
-        }
-        type();
+    } catch (err) {
+        console.error(err);
+        alert("AI 今天有點累，幫你手動輸入一下 🙏");
+    } finally {
+        overlay.classList.add('hidden');
     }
+}
+
+/* ==========================================
+   功能 B：AI 營養師聊天（穩定）
+========================================== */
+async function askAiQuestion() {
+    const input = document.getElementById('aiQuestionInput');
+    const box = document.getElementById('aiResponseBox');
+    const content = document.getElementById('aiContent');
+
+    const question = input.value.trim();
+    const total = document.getElementById('totalIntake').innerText;
+    const budget = document.getElementById('budgetDisplay').innerText;
+    const balance = document.getElementById('balance').innerText;
+
+    box.classList.remove('hidden');
+    content.innerHTML = "🤖 思考中…";
+
+    const prompt = question
+        ? `你是溫柔但務實的營養師。使用者問：「${question}」
+           今日已吃 ${total}，剩餘 ${balance}。請用 2～3 句回答。`
+        : `你是幽默教練，今天預算 ${budget}，剩 ${balance}，給一句短評。`;
+
+    try {
+        const reply = await callGemini(prompt);
+        typeWriter(reply, content);
+        input.value = "";
+    } catch (err) {
+        console.error(err);
+        content.innerText = "AI 今天請假 😴 明天再問我～";
+    }
+}
+
+/* ==========================================
+   打字機效果（安全版）
+========================================== */
+function typeWriter(text, el) {
+    el.innerHTML = "";
+    let i = 0;
+    const timer = setInterval(() => {
+        el.innerHTML += text[i] === "\n" ? "<br>" : text[i];
+        i++;
+        if (i >= text.length) clearInterval(timer);
+    }, 20);
+}
+</script>
 
     </script>
 <div id="settingsModal" class="fixed inset-0 z-50 flex items-end sm:items-center justify-center hidden">
