--- a/index.html
+++ b/index.html
@@ -487,21 +487,12 @@
         // 網頁載入時自動抓資料
         window.onload = fetchData;
 
-// ==========================================
-    //  AI 導師設定區
-    // ==========================================
-    const GEMINI_API_KEY = "AIzaSyCuIYHONCU9zulqEtKtRogKUHLA2k7E6do"; 
-    
-// ==========================================
-    //  AI 功能升級版：計算與問答
-    // ==========================================
 
-<script>
 /* ==========================================
    AI 穩定版設定
 ========================================== */
 
-const GEMINI_API_KEY = "你的 API KEY 放這裡"; // ⚠️ 之後我會教你怎麼藏
+const GEMINI_API_KEY = "AIzaSyCuIYHONCU9zulqEtKtRogKUHLA2k7E6do"; // ⚠️ 之後我會教你怎麼藏
 const GEMINI_MODEL = "gemini-1.5-flash";
 
 /* 共用呼叫 Gemini（最穩定寫法） */
@@ -614,7 +605,7 @@ function typeWriter(text, el) {
         if (i >= text.length) clearInterval(timer);
     }, 20);
 }
-</script>
+
 
     </script>
 <div id="settingsModal" class="fixed inset-0 z-50 flex items-end sm:items-center justify-center hidden">
