--- a/index.html
+++ b/index.html
@@ -493,21 +493,22 @@
 ========================================== */
 
 const GEMINI_API_KEY = "AIzaSyCuIYHONCU9zulqEtKtRogKUHLA2k7E6do"; // ⚠️ 之後我會教你怎麼藏
-const GEMINI_MODEL = "gemini-1.5-flash";
+const GEMINI_MODEL = "gemini-pro";
 
 /* 共用呼叫 Gemini（最穩定寫法） */
 async function callGemini(promptText) {
 const res = await fetch(
   `https://generativelanguage.googleapis.com/v1/models/${GEMINI_MODEL}:generateContent?key=${GEMINI_API_KEY}`,
-
-        {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-                contents: [{ parts: [{ text: promptText }] }]
-            })
-        }
-    );
+  {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+      contents: [{ parts: [{ text: promptText }] }]
+    })
+  }
+);
 
     if (!res.ok) throw new Error("Gemini API 失敗");
 
